# sense_eeg

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package.xml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_task_request.md
.github/workflow/: linting.yml
.github/workflows/: linting.yml
config/: gtec_publisher.yaml  mock_publisher.yaml
docs/: gUSBAmp.md
eeg_publisher/: mock_publisher.py  mock_subscriber.py
launch/: __init__.py  mock_publisher_launch.py
src/eeg_msgs/: setup.py
src/eeg_msgs/msg/: EEGBlock.msg
src/eeg_node/eeg_publisher/eeg_publisher/: mock_publisher.py
src/eeg_publisher/: package.xml
src/eeg_publisher/eeg_publisher/: mock_publisher.py
src/eeg_publisher/launch/: mock_publisher_launch.py
workspace/src/eeg_node/: README.md
workspace/src/eeg_node/eeg_msgs/msg/: EEGBlock.msg
workspace/src/eeg_node/eeg_publisher/: setup.cfg  setup.py
workspace/src/eeg_node/eeg_publisher/eeg_publisher/: mock_publisher.py
workspace/src/eeg_node/eeg_publisher/launch/: mock_publisher_launch.py
