<?xml version="1.0"?>
<package format="3">
  <name>eeg_publisher</name>
  <version>0.0.0</version>
  <description>Mock EEG Publisher</description>
  <maintainer email="a.al-hindawi@ucl.ac.uk">root</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eeg_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>eeg_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
