[project]
name = "sense_EEG"
dynamic = ["version"]
dependencies = []
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true
show_column_numbers = true
pretty = true
mypy_path = "typings"
files = ["src"]
